force-app/main/default/objects/LLC_BI__Contingent_Liabilty__c/fields/LLC_BI__Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Role__c</fullName>
    <description>This field, a dependent pick list, gives the ability to specify what capacity a contact can act in for a specific relationship.</description>
    <inlineHelpText>Valid options depending on entity type

Association: Officer/Agent
Corporation: Officer/Agent
Government: Official/Agent
LLC: Member/Agent
Partnership: Partner/Agent
Sole Prietorship: Sole Proprietorship
Trust: Trustee/Beneficiary/Agent</inlineHelpText>
    <label>Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>