force-app/main/default/objects/LLC_BI__Contingent_Liabilty__c/fields/WKDDP__Alternate_Signature_Description__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Alternate_Signature_Description__c</fullName>
    <description>Users populate this optional text field with a description of the alternate text to print under a signature line for this power of attorney. This text is the power of attorney&apos;s name and description.</description>
    <inlineHelpText>Enter the power of attorney&apos;s name and description to display under the signature line for the power of attorney.</inlineHelpText>
    <label>Alternate Signature Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>