force-app/main/default/objects/LLC_BI__Contingent_Liabilty__c/fields/WKDDP__Relationship_Description__c.field-meta.xml
<CustomField>
    <fullName>WKDDP__Relationship_Description__c</fullName>
    <description>Administrators enter a description of the relationship between the signer and the account.</description>
    <inlineHelpText>Enter a description of the relationship between the signer and the account.</inlineHelpText>
    <label>Relationship Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>